# swf-testbed

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES.md  SYSPROMPT.md  agents.supervisord.conf  bootstrap.md  docker-compose.yml  docker-entrypoint.sh  install.sh  next_steps.md  pyproject.toml  pytest.ini  report_system_status.py  run_all_tests.sh  test_agent_communication.py
agents/: data_agent.py  processing_agent.py  prompt_processing_agent.py
ai_memory/: README.md  __init__.py  load.py  record.py
config/: README.md  broker.xml  ddm_endpoints.json  panda_queues.json
docs/: activemq-broker-configuration.md  agent-management.md  ai-memory.md  architecture.md  architecture_and_design_choices.md  artemis-queue-configuration.md  development.md  development_effort_estimate.md  diagram1_three_contexts.md  diagram1_three_contexts.mmd  diagram2_mcp_ecosystem.md  diagram3_hybrid_workflow.md  diagram3_hybrid_workflow.mmd  diagram4_delta_before_after.md  diagram5_panda_provenance.md  diagram6_corunai_loop.md  diagram7_corunai_codocai.md  e0-e1-interface-source-notes.md  e0-e1-interface.md  e0-e1-state-machine.md  fast-processing-workflow.md  fast-processing.md  installation.md  monitor.md  operations.md  prompt-processing-workflow.md  proposal_diagrams.md  quick-start.md  releases.md  skills-for-testbed.md  sse-streaming.md  workflow_example.md  workflows.md
example_agents/: daq_simulator.py  daq_simulator_superseded.py  example_daqsim_agent.py  example_daqsim_agent_superseded.py  example_data_agent.py  example_fastmon_agent.py  example_fastmon_utils.py  example_processing_agent.py  fast_processing_agent.py  fast_processing_result_agent.py  processing_agent.py  remote_sse_receiver.py  remote_sse_sender.py  testbed.toml  workflow_simulator.py
scripts/: README.md  check-testbed.sh  configure-artemis-fast-processing.sh  dummy_stf_processing.sh
tests/: test_inject.py  test_main.py
workflows/: README.md  daq_state_machine.toml  fast_processing.py  fast_processing_default.toml  orchestrator.py  prompt_processing.py  prompt_processing.toml  prompt_processing_default.toml  send_workflow_command.py  stf_datataking.py  stf_datataking.toml  (+7 more)
(+5 files in other folders)
