[project]
name = "swf-testbed"
version = "0.1.0"
description = "A meta-package to install and manage the ePIC Streaming Workflow Testbed."
requires-python = ">=3.9"
dependencies = [
    # Dependencies from private GitHub Packages index
    "swf-common-lib",
    "swf-monitor",
    # "swf-fastmon-agent",
    # "swf-mcp-agent",
    # Agent dependencies
    "snapper-ai",
    "panda-client",
    # CLI tool dependencies
    "typer",
    "supervisor",
    "psutil",
    # Workflow simulation
    "simpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
# CLI entry points - both names work
testbed = "swf_testbed_cli.main:app"
swf-testbed = "swf_testbed_cli.main:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
swf-common-lib = { path = "../swf-common-lib", editable = true }
swf-monitor    = { path = "../swf-monitor",    editable = true }
snapper-ai     = { path = "../snapper-ai",     editable = true }
